# sqrl-client

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: client.rs  common.rs  error.rs  identity_information.rs  identity_unlock.rs  lib.rs  previous_identity.rs  protocol.rs  readable_vector.rs  scrypt_config.rs  server.rs  writable_datablock.rs
src/client/: common.rs  identity.rs  identity_information.rs  identity_key.rs  identity_unlock.rs  mod.rs  previous_identity.rs  readable_vector.rs  scrypt.rs  scrypt_config.rs  user_configuration.rs  writable_datablock.rs
src/data/: identity_information.rs  identity_unlock.rs  mod.rs  previous_identity.rs  scrypt_config.rs  writable_datablock.rs
src/protocol/: client_request.rs  mod.rs  protocol_version.rs  server_response.rs
test_resources/: Spec-Vectors-Identity.sqrl
