[package]
name = "sqrl-client"
version = "0.1.0"
edition = "2021"
description = "A rust implementation of client-side code for Secure Quick Reliable Login (SQRL)"
license = "GPL-3.0-only"
repository = "https://github.com/thechrisjohnson/sqrl"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
byteorder = "1.5.0"
ed25519-dalek = "2.1.1"
hmac = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
scrypt = "0.11.0"
sha2 = "0.10.8"
sqrl-protocol = "0.1.2"
url = "2.5.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
