[package]
name = "sqrl-client"
version = "0.1.0"
edition = "2021"
description = "A rust implementation of client-side code for Secure Quick Reliable Login (SQRL)"
license = "GPL-3.0-only"
repository = "https://github.com/thechrisjohnson/sqrl"

[dependencies]
aes-gcm = "0.11.0"
base64 = "0.22.0"
byteorder = "1.5.0"
ed25519-dalek = "3.0.0"
hmac = "0.13.0"
num-bigint = "0.5.0"
num-traits = "0.2.18"
rand = "0.10.2"
scrypt = { version = "0.12", default-features = false }
sha2 = "0.11.0"
sqrl-protocol = "0.1.5"
url = "2.5.0"
x25519-dalek = { version = "3.0.0", features = ["getrandom", "static_secrets"] }
